# azure-exporter

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  appveyor.yml  azure-exporter.cabal  docker-compose.yml  stack.yaml
docker/: prometheus.yml
src/: Logger.hs  Main.hs
src/Azure/: Client.hs  Config.hs  Exporter.hs
