cabal-version:       2.4

name:                azure-exporter
version:             0.1.0.0
synopsis:            Prometheus metrics exporter for Azure
description:         Web service that collects metrics from Azure resources for Prometheus.
homepage:            https://github/mujx/azure-exporter
bug-reports:         https://github/mujx/azure-exporter/issues
license:             MIT
license-file:        LICENSE
author:              Konstantinos Sideris <siderisk@auth.gr>
maintainer:          Konstantinos Sideris <siderisk@auth.gr>
category:            Web
extra-source-files:  CHANGELOG.md

Flag dev
  Description: Build without optimizations.
  Default:     False
  Manual:      True

executable azure-exporter
  main-is:             Main.hs
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -rtsopts -with-rtsopts=-N
                       -threaded
  if flag(dev)
    ghc-options:       -O0
  else
    ghc-options:       -O2
  other-modules:       Azure.Exporter
                     , Azure.Config
                     , Azure.Client
                     , Paths_azure_exporter
                     , Logger
  build-depends:       base                  ^>= 4.12.0 && < 5
                     , aeson                  == 1.4.*
                     , aeson-casing           == 0.2.*
                     , bytestring             == 0.10.*
                     , containers             == 0.6.*
                     , http-client            == 0.6.*
                     , http-types             == 0.12.*
                     , katip                  == 0.8.*
                     , monad-parallel         == 0.7.*
                     , mtl                    == 2.2.*
                     , optparse-applicative   == 0.14.*
                     , aeson-pretty           == 0.8.*
                     , req                    == 2.0.*
                     , scotty                 == 0.11.*
                     , split                  == 0.2.*
                     , stm                    == 2.5.*
                     , text                   == 1.2.*
                     , unordered-containers   == 0.2.10.*
                     , wai                    == 3.2.*
                     , wai-extra              == 3.0.*
                     , yaml                   == 0.11.*
  hs-source-dirs:      src
  default-language:    Haskell2010
